2016-04-26  Jakob Dörr  <jakobdoerr@googlemail.com>

	* arts-2-3-479

	* controlfiles/artscomponents/doit/TestDOITaccelerated.arts,
	controlfiles/artscomponents/doit/doit_setup_accelerated.arts,
	controlfiles/artscomponents/doit/yREFERENCE_DOITaccelerated.xml:

	Added controlfiles to test the DOIT with convergence acceleration.

	* src/doit.cc,
	src/doit.h:

	Added an internal method for the convergence acceleration. It computes
	an accelerated field out of four iteration fields.

	* src/m_doit.cc:
	
	Added the option to enable or disable convergence acceleration in 
	doit_i_field_monoIterate (default is disable)

	* src/methods.cc:
	Added an Index "accelerated" to the generic input of 
	doit_i_field_monoIterate to control the convergence acceleration.

	* controlfiles/CMakeLists.txt: Added accelerated test.

2016-04-25  Simon Pfreundschuh  <simonpf@chalmers.se>

	* arts-2-3-478

	* src/matpackI.cc: Fixed bug in matrix-vector
	  multiplication.

	* src/test_matpack.cc: Added test to cover the
	  fixed bug.

2016-04-13  Simon Pfreundschuh  <simonpf@chalmers.se>

	* arts-2-3-478

	* 3rdparty/invlib/*: invlib update to include new timing
	functionality.

	* src/oem.h: Added timing for arithmetic operations.

2016-04-12  Simon Pfreundschuh  <simonpf@chalmers.se>

	* arts-2-3-477

	* doc/uguide/wfuns.tex: Fixed minor typos.

2016-04-12  Simon Pfreundschuh  <simonpf@chalmers.se>

	* arts-2-3-476

	* doc/uguide/formalism.tex: Fixed minor typos.

	* doc/uguide/ppath_theory.tex: Fixed minor typos.

2016-04-10  Simon Pfreundschuh  <simonpf@chalmers.se>

	* arts-2-3-475

	* 3rdparte/invlib/* Changed FM interface so that Jacobian
	computation also computes y prediction.

	* m_oem: Avoid computation of Jacobian when only y is needed.

2016-04-09  Simon Pfreundschuh  <simonpf@chalmers.se>

	* arts-2-3-474

	* methods.cc: Renamed WSM oem to OEM

	* m_oem: Renamed oem to OEM. Added conjugate gradient versions
	for each optimization method.

	* 3rdparte/invlib/* invlib update.
